# music-influence-gnn

./: .gitignore  DATA_PLAN.md  EXPERIMENTS.md  PLANO.md  README.md  STATUS.md  leituras.md  pyproject.toml  todos.md
.claude/skills/tlc-spec-driven/: .skill-meta.json
.specs/features/phase-0-baselines/: design.md  spec.md  tasks.md
.specs/features/phase-1-hetero-graph/: design.md  spec.md  tasks.md
.specs/features/phase-2-temporal-gnn/: context.md  design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
data/processed/graph/: node_id_map.json
docs/: docs.md
documento_qualificao/: main.tex  referencias.bib
documento_qualificao/1-intro/: texto.tex
documento_qualificao/2-fundam/: texto.tex
documento_qualificao/3-arte/: texto.tex
documento_qualificao/4-metodologia/: texto.tex
documento_qualificao/5-resultados/: texto.tex
exploration/: 00_overview.ipynb  01_charts.ipynb  02_songs_features.ipynb  03_artists.ipynb  04_networks.ipynb  05_subset_viral_hit.ipynb  06_gnn_design_sketch.ipynb
notebooks/: duvidas_basicas.md  phase1_apresentacao.ipynb  phase2_apresentacao.ipynb  phase2_pipeline_treino.ipynb
scripts/: inspect_mgdplus.py  run_phase0.py  run_phase1.py  run_phase2.py  run_phase2_experimentos.py  verify_data.py
scripts/exploratory/: inspect_mgdplus.py  verify_data.py
src/music_diffusion_gnn/: __init__.py
tests/: test_metrics.py  test_node_feature_leakage.py  test_phase1_build.py  test_phase1_temporal.py  test_phase2_forward.py  test_phase2_leakage.py  test_preprocess.py  test_sir.py
(+18 files in other folders)
