[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_diffusion_gnn"]

[project]
name = "music-diffusion-gnn"
version = "0.1.0"
description = "Heterogeneous temporal GNN for music popularity diffusion (BraSNAM 2026 submission)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cristiano Mendieta" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.11",
  "networkx>=3.1",
  "torch>=2.1",
  "torch-geometric>=2.5",
  "pytorch-lightning>=2.2",
  "wandb>=0.16",
  "seaborn>=0.13",
  "matplotlib>=3.8",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["ipykernel", "ruff", "pytest"]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests that run the full build pipeline (run with -m slow)",
]

